# margin

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
app/: package.json  pnpm-lock.yaml  vite.config.js
app/messages/: en.json  it.json
app/project.inlang/: settings.json
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: crypto.rs  fs.rs  history.rs  lib.rs  s3.rs  session.rs  settings.rs  sync.rs  text.rs  text_transform.rs  themes.rs
app/src-tauri/src/fs/: export.rs  mod.rs  search.rs  tags.rs  walk.rs  watch.rs
app/src-tauri/src/text/: mod.rs  search.rs  wiki_links.rs
app/src-tauri/src/text_transform/: image_paths.rs  mod.rs
app/src/lib/: bindings.ts  ipc.ts
app/src/lib/canvas/: renderer.ts  serialization.ts  snapping.ts  types.ts
app/src/lib/components/: BubbleToolbar.svelte  CanvasContextMenu.svelte  CanvasEditor.svelte  CanvasToolbar.svelte  ContextMenu.svelte  Editor.svelte  EmojiMenu.svelte  FileTree.svelte  FindReplace.svelte  FolderNode.svelte  GraphView.svelte  HistoryPanel.svelte  ImageLightbox.svelte  ImageViewer.svelte  Login.svelte  MentionMenu.svelte  PaneView.svelte  PdfViewer.svelte  QuickSwitcher.svelte  Settings.svelte  Sidebar.svelte  SidebarFavourites.svelte  SidebarSearch.svelte  SlashMenu.svelte  StatusBar.svelte  ThemeEditor.svelte
app/src/lib/crypto/: bridge.ts
app/src/lib/editor/: attachments.ts  auto-joiner.ts  (+33 more)
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+57 files in other folders)
