[package]
name = "app"
version = "0.1.11"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bip39 = "2"
aes-gcm-siv = "0.11"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
base64 = "0.22"
percent-encoding = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
rayon = "1"
memchr = "2"
filetime = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-drag = "2.1.0"

